[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scSpectra"
version = "0.2.0"
description = "Supervised discovery of interpretable gene programs from single-cell data"
authors = [
    { name = "Russel Z. Kunes", email = "KunesR@mskcc.org" },
    { name = "Thomas Walle", email = "t.walle@dkfz-heidelberg.de" },
]
maintainers = [
    { name = "Russel Z. Kunes", email = "KundesR@mskcc.org" },
    { name = "Tobias Krause", email = "krauset@mskcc.org" }
]
dependencies = [
    "numpy>=1.20.3",
    "scipy>=1.7.3",
    "scanpy>=1.8.2",
    "torch>=1.10.1",
    "opt-einsum>=3.3.0",
    "pandas>=1.3.5",
    "tqdm>=4.62.3",
    "pyvis>=0.1.9",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tools.setuptools]
include-package-data = true
packages = ["Spectra", "Spectra.load"]

[tool.setuptools.package-data]
default_gene_sets = ["Spectra/data/default_gene_sets.json"]
sample_data = ["Spectra/data/sample_data.json"]

[project.urls]
"Publication" = "https://www.nature.com/articles/s41587-023-01940-3"
"bioRxiv" = "https://www.biorxiv.org/content/10.1101/2022.12.20.521311v1"

